Prevent image kind from overflowing by default

--- a/notebooks/custom.scss
+++ b/notebooks/custom.scss
@@ -4,3 +4,5 @@
 .table {width:auto}
 
 code {font-family: 'Fira Code Medium', monospace;}
+
+.clay-image img {max-width: 100%}
